Fixes typos and various other problems

--- a/src/main/resources/lang/de/de-DE.txt
+++ b/src/main/resources/lang/de/de-DE.txt
@@ -59,13 +59,13 @@ ecoInsolvent=Unzureichende Mittel
 #Terminology
 gate=Tor
 network=Netzwerk
-interserver=Interserver
+interServer=Inter-server
 default=Standard
 terminal=Terminal
 personal=Persönlich
 
 #Temporary
-unimplementedInterserver=Interserver-Tore befinden sich noch in aktiver Entwicklung und sind nur teilweise implementiert.
+unimplementedInterServer=Interserver-Tore befinden sich noch in aktiver Entwicklung und sind nur teilweise implementiert.
 unimplementedIConflict=Das %name% %type1% Netzwerk wurde vorübergehend vom %name% %type2% Netzwerk getrennt, wird aber bald zusammengefügt
 unimplementedFlag=Die %flags% Flags sind noch nicht implementiert.
 
