--- a/src/main/resources/lang/lol/config_lol-US.txt
+++ b/src/main/resources/lang/lol/config_lol-US.txt
@@ -85,10 +85,17 @@ signFormatting.pointerBehaviourL3=OPSHUNS:
 signFormatting.pointerBehaviourL4=1: NO STYLIN (TEH POINTR WILL BE TEH SAME DEFAULT COLOUR USD BY TEH SIGNS TEXT).
 signFormatting.pointerBehaviourL5=2: DESTINASHUN TYPE (TEH POINTR WILL COLOUR-CODE BASD ON TEH SELECTD DESTINASHUN)
 signFormatting.pointerBehaviourL6=3: ACSENTD (POINTR BRIGHTNES WILL SHIFT 2 CONTRAST WIF TEH SIGNS DEFAULT COLOUR)
+disableCustomColoredNamesL1=BY DEFAULT, SG ALLOWS USERS 2 SPECIFY COLOURD NAMEZ 4 THEIR GATEZ VIA EXTERNAL PLUGINS.
+disableCustomColoredNamesL2=SUCH NAMEZ OVERRIDE TEH COLOURS SPECIFID 4 SIGNSTYLE (ABOOV).
+disableCustomColoredNamesL4=SHUD SG DISABLE DIS BEHAVIOUR BY FORCIN TEH GAME 2 DISPLAY EGSAKTLY WUT WUZ WRITTEN?
+rememberLastDestinationL1=WILL TEH DESTINASHUN NETWORKD PORTAL LAST CONNECTD 2 BE LISTD FURST IN ITZ SCROLL MENU?
 
 #Technical
 portalFileL1=WHEN USEREMOTEDATABASE IZ FALSE, STARGATE STOREZ ALL OV ITZ PORTAL DATA IN FLATFILE.
 portalFileL2=WUT SHUD DIS FLATFILE BE NAMD?
+gateFolderL1=CURRENTLY, ON STARTUP, FOLDR IZ CHECKD 4 GATE LAYOUTS STORD AS ‘.GATE’ FILEZ.
+gateFolderL2=WER IZ DAT FOLDR?
+gateFolderL4=DIS OPSHUN IZ PROVIDD AS PATCH 2 ALLOW DATA 2 BE IMPORTD FRUM SUM OLDR FORKZ.
 customRemoteDatabasePrefixL1=BY DEFAULT, SG WILL PREFACE ITZ REMOTE DATABASE TABLEZ WIF `SG_`.
 customRemoteDatabasePrefixL2=IF DIS CONFLICTS WIF ANOTHR PLUGIN, U CAN CHANGE DAT PREFIX HER.
 loggingLevelL1=POSIBLE VALUEZ:
