--- a/src/main/resources/lang/lol/lol-US.txt
+++ b/src/main/resources/lang/lol/lol-US.txt
@@ -59,14 +59,15 @@ ecoInsolvent=U BROKE!
 #Terminology
 gate=GATE
 network=NETWORK
-interServer=INTER-SERVER
+interserver=INTERSERVER
 default=DEFAULT
 terminal=TERMINAL
 personal=UR NETWORK
 custom=CUSTOM
+local=LOCAL
 
 #Temporary
-unimplementedInterServer=INTER-SERVR GATEZ R STILL IN ACTIV DEVELOPMENT AN HAS ONLY PARTIALLY BEEN IMPLEMENTD.
+unimplementedInterserver=INTERSERVR GATEZ R STILL IN ACTIV DEVELOPMENT AN HAS ONLY PARTIALLY BEEN IMPLEMENTD.
 unimplementedIConflict=TEH %name% %type1% NETWORK HAS BEEN TEMPORARILY SEPARATD FRUM TEH %name% %type2% NETWORK, BUT WILL SOON BE MERGD.
 unimplementedFlag=TEH %flags% FLAGS HAS NOT YET BEEN IMPLEMENTD.
 
