--- a/src/main/resources/lang/uk/config_uk-UA.txt
+++ b/src/main/resources/lang/uk/config_uk-UA.txt
@@ -1,14 +1,93 @@
 # Headers
+headerVersion=Версія: %version%
+headerDocumentation=Документація: %link%
+headerReports=Звіти про помилки: %link%
+headerPreferences=Загальні налаштування
+headerBehaviour=Поведінка шлюзів
+headerEconomy=Економіка
+headerTechnical=Технічний
+subheaderCompat=Сумісність
+subheaderLogging=Журналювання
+subheaderDebug=Налагодження
+descriptionCompatibility=Ці налаштування надаються для покращення взаємодії SG з іншими плагінами.
+descriptionLogging=Скільки інформації Stargate має надсилати на консоль?     
+descriptionDebug=Ці налаштування надаються, щоб допомогти розробникам діагностувати проблеми з цим плагіном. 
+tagNote=ВАЖЛИВО
 
 # General Preferences
+languageL1=Якою мовою Stargate буде спілкуватися з вашими користувачами?
+languageL2=Підтримувані значення: %values%
+languageL4=Якщо SG ще не доступний вашою мовою, подумайте про те, щоб стати перекладачем:
+bungee.UsingBungeeL1=Ви підключені до проксі-сервера, сумісного з Bungee?
+bungee.usingBungeeL2=Встановіть значення true, якщо ви збираєтеся створювати шлюз з позначкою «u».
+bungee.useRemoteDatabaseL1=За замовчуванням StarGate використовує локальну базу даних SQLite для зберігання своїх даних.
+bungee.useRemoteDatabaseL3=Якщо ви використовуєте великий сервер, ми рекомендуємо використовувати віддалену базу даних.
+bungee.useRemoteDatabaseL4=Зауважте, що така база даних потрібна, якщо ви збираєтеся створювати шлюзи з позначкою «i».
+bungee.remoteDatabaseSettings.L1=Застосовується, лише якщо useRemoteDatabase має значення true.
+bungee.remoteDatabaseSettings.driverL1=Який драйвер має використовувати Stargate для підключення до вашої бази даних?
+bungee.remoteDatabaseSettings.driverL2=Наразі підтримується: %values%
+bungee.remoteDatabaseSettings.addressL1=Де Stargate може знайти вашу базу даних?
+bungee.remoteDatabaseSettings.useSSLL1=Чи повинно Stargate використовувати SSL під час підключення до вашої бази даних?
+bungee.remoteDatabaseSettings.databaseL1=Назва бази даних, яку StarGate використовуватиме для зберігання своїх даних. Має вже існувати.
+bungee.remoteDatabaseSettings.databaseL2=Якщо ви використовуєте Bungee, це має бути спільно для всіх екземплярів StarGate.
+bungee.remoteDatabaseSettings.usernameL1=Облікові дані для підключення:
+bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL1=Чи маємо ми створити файл конфігурації бази даних ('hikari.properties') у вашій папці Stargate?
+bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL2=Це призведе до ігнорування всіх наведених вище параметрів remoteDatabaseSettings на користь нового файлу!
+bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL4=Це дозволяє використовувати розширені функції RDMS, такі як обмеження пулу, розміри кешу тощо.
+bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL5=Список доступних налаштувань можна знайти за цим посиланням: %link%.
+defaultGateNetworkL1=Яка мережа використовуватиметься, якщо жодна не вказана? (Макс. довжина 12 символів)
+defaultGateNetworkL3=Зауважте, що це в першу чергу стосується користувачів із вузлом stargate.create.network.
+defaultGateNetworkL4=Як правило, цей вузол надається персоналу (ми рекомендуємо stargate.create.personal для користувачів).
+defaultTerminalNetworkL1=Яку мережу StarGate зарезервує для порталів термінала ('T')?
+defaultTerminalNetworkL3=Як правило, ця функція використовується для створення групи порталів у спавні, відомої як «Термінал».
+defaultTerminalNetworkL4=Використовуючи цю мережу, гравці можуть платити за підключення своїх міст/баз/магазинів тощо до термінала.
+defaultTerminalNetworkL6=Ще не реалізовано!
+defaultTerminalNetworkL7=Підтримка терміналів передбачена для %version%!
 
 # Gate Behaviour
+networkLimitL1=Яку максимальну кількість шлюзів може містити одна мережа? (-1 для необмеженого)
+handleVehiclesL1=Чи зможуть транспорти та їхні пасажири подорожувати через портали StarGate?
+handleVehiclesL2=вагонетки, човни та моби з сідлом = транспорти | гравці та моби = пасажири
+handleLeashedCreaturesL1=Якщо гравець телепортується, бувши на сутності, чи повинен SG також телепортувати сутність?
+CheckPortalValidityL1=Чи буде сервер повторно перевіряти всі наявні портали під час запуску?
+CheckPortalValidityL3=Це перевіряє наявність очікуваних шлюзів і використання правильного макета.
+CheckPortalValidityL4=Призначений для виявлення змін у файлі .gate, змін у світі та регенерації рельєфу.
+destroyOnExplosionL1=Чи можна зламати StarGates через вибух?
+destroyOnExplosionL2=[вибухівка, кріпери тощо]
+gateExitSpeedMultiplierL1=З якою швидкістю потрібно виводити гравців із порталів?
+gateExitSpeedMultiplierL2=При виході зі шлюзу гравці зберігають початкову швидкість руху, помножену на це значення.
 
 # Economy
+useEconomyL1=Чи взаємодіятиме StarGate з економікою вашого сервера?
+useEconomyL3=Для цих функцій StarGate залежить від плагіна Vault.
+taxAccountL1=Чи є у вашого сервера податковий рахунок (закрита економіка)?
+taxAccountL2=Якщо так, будь ласка, вкажіть назву свого податкового рахунку (на нього будуть перераховані зібрані гроші).
+taxAccountL3=Якщо ні, залиште цей розділ порожнім (зібрані гроші будуть видалені).
+TaxAccountL5=Зауважте, що гроші usageCost виключаються з цієї системи, якщо параметр gateOwnerRevenue має значення true.
+creationCostL1=Скільки буде списано з рахунків гравців при створенні нових шлюзів?
+destructionCostL1=Скільки буде списано з рахунків гравців при знищенні наявних шлюзів?
+usageCostL1=Скільки буде списано з рахунків гравців при використанні Stargate для телепортації?
+usageCostL2=Це не стосується Stargates з позначкою «f».
 
 # Aesthetic Tweaks
+signFormatting.pointerBehaviourL3=Параметри:
 
 #Technical
+portalFileL1=Якщо useRemoteDatabase має значення false, Stargate зберігає всі свої дані порталу в flat файлі.
+portalFileL2=Як має бути названий цей flat файл?
+customRemoteDatabasePrefixL1=За замовчуванням SG перед таблицями віддаленої бази даних вказує `SG_`.
+customRemoteDatabasePrefixL2=Якщо це конфліктує з іншим плагіном, ви можете змінити цей префікс тут.
+loggingLevelL1=Можливі значення:
+loggingLevelL2=Не рекомендовано
+loggingLevelL4=Рекомендується для великих і добре перевірених виробництв
+loggingLevelL6=Рекомендується для більшості виробництв
+loggingLevelL8=Корисно для налаштування попередніх екземплярів
+loggingLevelL10=Рекомендується для базового усунення несправностей
+loggingLevelL12=Рекомендовано для деяких розробників аддонів.
+LoggingLevelL14=Використовується лише основною командою розробників StarGate
+configVersionL1=Внутрішнє значення, яке використовується плагіном для визначення того, скільки років вашій конфігурації.
+configVersionL2=Будь ласка, не змінюйте це.
 
 
 #Admin
+translatedBy=Veydzher
